レイアウト作成

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+      <meta charset="UTF-8">
+      <title>30DAYSトライアル</title>
+      <link rel="stylesheet" href="css/reset.css">
+      <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+      <div class="container">
+        <header>
+          <h1 class="title">30DAYSトライアル</h1>
+          <nav class="global-nav">
+            <ul>
+              <li class="nav-item"><a href="#">デイトラとは</a></li>
+              <li class="nav-item"><a href="#">コース一覧</a></li>
+              <li class="nav-item"><a href="#">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+        <div class="heading">
+          <div class="container">
+            <h2>1日1題30日で<br>プロのエンジニアになろう</h2>
+            <p>毎日設定された課題をこなすだけ！未経験から30日でプログラミングスキルが身につきます</p>
+          </div>
+        </div>
+      <div class="container">
+        <div class="introduction"></div>
+        <div class="course"></div>
+        <div class="inquiry"></div>
+        <footer></footer>
+      </div>
 
     </body>
 </html>
