--- a/index.html
+++ b/index.html
@@ -21,15 +21,50 @@
       </div>
         <div class="heading">
           <div class="container">
-            <h2>1日1題30日で<br>プロのエンジニアになろう</h2>
-            <p>毎日設定された課題をこなすだけ！未経験から30日でプログラミングスキルが身につきます</p>
+            <h2>1日1題30日で<br>プロのWebエンジニアになろう！</h2>
+            <p>毎日設定された課題をこなすだけ！未経験から<br>30日でプログラミングスキルが身につきます</p>
           </div>
         </div>
       <div class="container">
-        <div class="introduction"></div>
-        <div class="course"></div>
-        <div class="inquiry"></div>
-        <footer></footer>
+        <div class="about">
+          <h3>デイトラとは</h3>
+          <div class="about-content">
+            <img src="img/about.png">
+            <p>デイトラとは、無料で・迷わず・楽しく学べるプログラミング学習アプリです。毎日設定された課題をこなしていくだけで、未経験から30日でプログラミングスキルが身につきます。<br>
+            1日1題30日でプロのWebエンジニアを目指しましょう！</p>
+          </div>
+          
+        </div>
+        <div class="course">
+          <h3>コース一覧</h3>
+          <div class="course-container">
+            <div class="course-item">
+              <img src="img/web_first.png">
+              <p>HTML / CSS / Bootstrap</p>
+            </div>
+            <div class="course-item">
+              <img src="img/web_second.png">
+              <p>HTML / CSS / JavaScript / jQuery</p>
+            </div>
+            <div class="course-item">
+              <img src="img/web_third.png">
+              <p>PHP / WordPress</p>
+            </div>
+          </div>
+          
+        </div>
+        <div class="inquiry">
+          <h3>お問い合わせ</h3>
+          <div class="inquiry-content">
+            <p>さあ今日から30日間を始めよう!</p>
+            <input type="text" value="メールアドレス" id="mail-address">
+            <input type="button" value="無料ではじめる" id="inquiry-button">
+          </div>
+        </div>
+        <footer>
+          <hr color="#e2e2e2">
+          <p>Copyright(C) 2020 東京フリーランス ALL Rights Reserved.</p>
+        </footer>
       </div>
 
     </body>
